Se agrega parte del marco teorico

--- a/Main_document.tex
+++ b/Main_document.tex
@@ -1,4 +1,4 @@
-\documentclass[12pt]{book}
+\documentclass[14pt]{book}
 \usepackage[utf8]{inputenc} 
 \usepackage[spanish]{babel}
 \usepackage[T1]{fontenc}
@@ -17,7 +17,7 @@
 \thispagestyle{empty}
 \include{Portada}
 
-\normalsize
+\Large
 \thispagestyle{empty}
 \include{Resume}
 %\include{Abstract}
@@ -30,7 +30,7 @@
 %\tableofcontents
 \include{Introduction}
 \include{Objetivos}
-\include{Chapitre1}
+\include{Marco_teorico}
 \include{Chapitre2}
 
 \nocite*
