--- a/biblio.bib
+++ b/biblio.bib
@@ -1,9 +1,58 @@
-@book{Griffin1990,
-title={Handbook of Human Vibration},
-author={M. J. Griffin},
-isbn={9780123030412},
-series={988 p},
-url={http://books.google.fr/books?id=tBaCHObL-XQC},
-year={1990},
-publisher={Academic Press}
+@ARTICLE{Stoica2013,
+author = {M. Stoica and M. Mircea and B. Ghilic-Micu},
+title = {Software development: Agile vs. traditional. Informatica Economica},
+year = {2013},
+volume = {17(4)},
+pages = {64}
+}
+
+@ARTICLE{Dorst2011,
+author = {K. Dorst},
+title = {The core of ‘design thinking’and its application. Design studies},
+year = {2011},
+volume = {32(6)},
+pages = {521-532}
+}
+
+@ARTICLE{Clune2014,
+author = {S.j. Clune and S. Lockrey},
+title = {Developing environmental sustainability strategies, the Double Diamond method of LCA and design thinking: a case study from aged care. Journal of cleaner production},
+year = {2014},
+volume = {85},
+pages = {67-82}
+}
+
+@ARTICLE{Clune2014,
+author = {S.j. Clune and S. Lockrey},
+title = {Developing environmental sustainability strategies, the Double Diamond method of LCA and design thinking: a case study from aged care. Journal of cleaner production},
+year = {2014},
+volume = {85},
+pages = {67-82}
+}
+
+@misc{DesignCouncil,
+author={Design-Council},
+  title = {Eleven lessons: managing designin eleven global brands A study of the design process},
+  howpublished = {\url{https://www.designcouncil.org.uk/sites/default/files/asset/document/ElevenLessons_Design_Council\%20(2).pdf}},
+  note = {Accessed: 2018-01-12}
+}
+
+@CONFERENCE{Villamizar2015,
+author = {M. Villamizar and O. Garcés and H. Castro and M. Verano and L. Salamanca and R. Casallas and S. Gil},
+title = {Evaluating the monolithic and the microservice architecture pattern to deploy web applications in the cloud},
+year = {2015},
+}
+
+@misc{Netflix,
+author={Abhisek Jana},
+  title = {Develop Microservices using Netflix OSS and Spring Boot},
+  howpublished = {\url{http://www.adeveloperdiary.com/java/spring-boot/develop-microservices-using-netflix-oss-spring-boot/}},
+  year={2016},
+  note = {Accessed: 2018-01-12}
+}
+
+@CONFERENCE{Lopez2017,
+author = {D. Lopez and E. Maya},
+title = {Arquitectura de Software basada en Microservicios para Desarrollo de Aplicaciones Web.},
+year = {2017},
 }
