Se deja casi terminada la seccion de resultados

--- a/Main_document.tex
+++ b/Main_document.tex
@@ -12,7 +12,7 @@
 \usepackage{enumerate}
 \usepackage{breakcites}
 \usepackage{hyperref}
-%\usepackage{cite}
+\usepackage{appendix}
 \usepackage[export]{adjustbox}
 \geometry{hmargin=2.5cm,vmargin=2.5cm}
 
@@ -29,6 +29,7 @@
 \include{Marco_teorico}
 \include{Metodologia}
 \include{Resultados}
+\include{Anexo}
 
 \bibliographystyle{apalike}
 %\bibliographystyle{acm}
